force-app-modified/main/default/objects/Course_Subject__c/Course_Subject__c.object-meta.xml
<CustomObject>
    <label>מקצוע קורס</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>מספר מקצוע בקורס</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>מקצועות קורסים</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>