force-app-modified/main/default/objects/Course_Subject__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>