force-app-modified/main/default/objects/Course_Subject__c/fields/Learning_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Learning_Program_Type__c</fullName>
    <label>סוג תכנית לימוד</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Learning_Program_Type__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Learning_Program_Type__c</referenceTo>
    <relationshipLabel>מקצועות קורסים</relationshipLabel>
    <relationshipName>Learning_Program_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>