force-app-modified/main/default/objects/Course_Subject__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <label>Subject Name</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>